--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <!--bootstrap 5.0.2 CSS-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <!--Google Fonts-->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@200;300;700&display=swap" rel="stylesheet">
   <!--Hojas de Estilo-->
   <link rel="stylesheet" href="css/index.css">
 
@@ -41,7 +45,7 @@
                         <a class="nav-link" href="html/reserva.html">Reserva</a>
                     </li>
                     <li class="nav-item ingresar">
-                        <a class="nav-link" href="html/login.html">Ingresar</a>
+                        <a class="nav-link link-ingresar" href="html/login.html">Ingresar</a>
                     </li>
                 </ul>
             </div>
@@ -64,8 +68,9 @@
 
     <!--INICIO FOOTER-->
     <footer class="bg-oliva d-flex flex-column align-items-center justify-content-center"> 
-        <img class="footer-logo" src="img/truck.svg" alt="Logo del portafolio">
-        <p class="footer-texto text-center">Primer frase de la empresa<br>Frase 2 empresa.</p>
+        <i class="bi bi-truck truck-2"></i>
+        <p  class="footer-texto-logo">ParkingTruck</p>
+        <p class="footer-texto text-center">Disfruta de la verdadera comodidad</p>
         
         <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
           <a href="https://twitter.com/ParkingTruck" target="_blank" rel="noopener noreferrer">
