--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                         <a class="nav-link active" aria-current="page" href="index.html">Inicio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="html/nosotros.html">Nosotros</a>
+                        <a class="nav-link" href="#nosotros-sec">Nosotros</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="html/reserva.html">Reserva</a>
@@ -47,18 +47,32 @@
                     <li class="nav-item ingresar">
                         <a class="nav-link link-ingresar" href="html/login.html">Ingresar</a>
                     </li>
-                </ul>
+                </ul> 
             </div>
         </div>
     </nav>
     <!--FIN BARRA DE NAVEGACIÓN-->
 
-    <section>
-        Seccion 1: Logo empresa, imagen de fondo, boton que lleve a reservar
-        <br><button type="button" class="btn btn-success align-items-center">Reserva Ya!</button>
-
+    <section class="hero align-items-stretch">
+        <div class="hero-principal d-flex flex-column justify-content-center">
+          <img class="hero-imagen-ds" src="img/logotruck1.svg" alt="Foto Truck">
+          <h1 class="letra-kanit-700">PARKING TRUCK</h1>
+          <h2 class="letra-kanit-300">¡Estaciona con nosotros y disfruta de la tranquilidad que mereces!</h2>
+        </div>
     </section>
-        
+
+    <section>
+      <br><button type="button" class="btn btn-success align-items-center">Reserva Ya!</button><br>
+    </section>
+
+    <section id="nosotros-sec" class="seccion-oscura-2">
+      <div class="contenedor-sc">
+        <h2 class="letra-kanit-700">Nosotros</h2><br>
+        <p class="letra-kanit-300">Somos una empresa dedicada a ofrecer servicios integrales para camiones y vehículos de carga. Nuestro compromiso es brindar soluciones eficientes y de alta calidad para satisfacer todas tus necesidades en un solo lugar.En nuestra empresa, nos enorgullece ofrecer una gama completa de servicios para camiones y vehículos de carga. Nuestro compromiso con la excelencia y la eficiencia nos impulsa a proporcionar soluciones de alta calidad que satisfacen todas tus necesidades. Ya sea que necesites un lugar seguro para estacionar tu vehículo, un restaurante para disfrutar de una comida deliciosa después de un largo viaje, o un servicio de mantenimiento confiable para mantener tu vehículo en las mejores condiciones, estamos aquí para ayudarte. Nuestro equipo de profesionales capacitados está dedicado a garantizar que recibas el mejor servicio posible.</p>
+        <p class="letra-kanit-300">Nuestro objetivo es proporcionarte un servicio excepcional y hacer que tu viaje sea lo más cómodo posible. ¡Esperamos tener la oportunidad de servirte pronto!</p>
+      </div>
+    </section>
+
     <section class="experiencia seccion-clara">
       <div class="container text-center">
         <div class="row">
@@ -74,7 +88,7 @@
           <div class="columna col-12 col-md-4">
             <i class="bi bi-truck"></i>
             <p class="experiencia-titulo">Parking</p>
-            <p>Nuestro parking está equipado con vigilancia las 24 horas y amplios espacios, garantizando la protección de tu vehículo. Además, nuestro personal está siempre disponible para ayudarte. ¡Estaciona con nosotros y disfruta de la tranquilidad que mereces!”</p>
+            <p>Nuestro parking está equipado con vigilancia las 24 horas y amplios espacios, garantizando la protección de tu vehículo. Además, nuestro personal está siempre disponible para ayudarte”</p>
           </div>
           
           <!--Mantenimiento-->
