Actualización index y primera parte de reserva

--- a/html/login.html
+++ b/html/login.html
@@ -22,31 +22,30 @@
 <body>
     <!--BARRA DE NAVEGACIÓN-->
     <nav class="navbar navbar-expand-md p-3 bg-oliva">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarToggler">
-                <a class="navbar-brand" href="../index.html">
-                    <i class="bi bi-truck"></i>ParkingTruck
-                </a>
-
-                <ul class="navbar-nav d-flex justify-content-center align-items-center">
-                    <li class="nav-item">
-                        <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="nosotros.html">Nosotros</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="reserva.html">Reserva</a>
-                    </li>
-                    <li class="nav-item ingresar">
-                        <a class="nav-link link-ingresar active" href="login.html">Ingresar</a>
-                    </li>
-                </ul>
-            </div>
+      <div class="container-fluid">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarToggler">
+          <a class="navbar-brand" href="index.html">
+            <img class="navbar-logo" src="../img/logotruck1.svg" alt="Foto Truck"> PARKINGTRUCK
+          </a>
+          <ul class="navbar-nav d-flex justify-content-center align-items-center">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Nosotros</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="../index.html">Reserva</a>
+            </li>
+            <li class="nav-item ingresar">
+              <a class="nav-link link-ingresar" href="login.html">Ingresar</a>
+            </li>
+          </ul> 
         </div>
+      </div>
     </nav>
     <!--FIN BARRA DE NAVEGACIÓN-->
 <section class="login">
@@ -72,26 +71,25 @@
 
 <!--INICIO FOOTER-->
 <footer class="bg-oliva d-flex flex-column align-items-center justify-content-center"> 
-    <i class="bi bi-truck truck-2"></i>
-    <p  class="footer-texto-logo">ParkingTruck</p>
-    <p class="footer-texto text-center">Disfruta de la verdadera comodidad</p>
-    
-    <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
-      <a href="https://twitter.com/ParkingTruck" target="_blank" rel="noopener noreferrer">
-        <i class="bi bi-twitter"></i>
-      </a>
-      <a href="https://facebook.com/ParkingTruck/" target="_blank" rel="noopener noreferrer">
-        <i class="bi bi-facebook"></i>
-      </a>
-      <a href="https://www.instagram.com/ParkingTruck/" target="_blank" rel="noopener noreferrer">
-        <i class="bi bi-instagram"></i>
-      </a>
-      <a href="mailto:parkingtruck@correo.com" target="_blank" rel="noopener noreferrer">
-        <i class="bi bi-envelope"></i>
-      </a>
-    </div>
-    <div class="derechos-de-autor">© 2023 ParkingTruck | Todos los derechos reservados</div>
-  </footer>
+  <img class="truck-2" src="../img/logotruck1.svg" alt="Foto Truck">
+  <p  class="footer-texto-logo letra-kanit-700">ParkingTruck</p>
+  <p class="footer-texto text-center">Disfruta de la verdadera comodidad</p>
+  <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+    <a href="https://twitter.com/ParkingTruck" target="_blank" rel="noopener noreferrer">
+      <i class="bi bi-twitter"></i>
+    </a>
+    <a href="https://facebook.com/ParkingTruck/" target="_blank" rel="noopener noreferrer">
+      <i class="bi bi-facebook"></i>
+    </a>
+    <a href="https://www.instagram.com/ParkingTruck/" target="_blank" rel="noopener noreferrer">
+      <i class="bi bi-instagram"></i>
+    </a>
+    <a href="mailto:parkingtruck@correo.com" target="_blank" rel="noopener noreferrer">
+      <i class="bi bi-envelope"></i>
+    </a>
+  </div>
+  <div class="derechos-de-autor">© 2023 ParkingTruck | Todos los derechos reservados</div>
+</footer>
 <!--FIN FOOTER-->
   
 <!--bootstrap 5.0.2 JS-->
