--- a/html/registro.html
+++ b/html/registro.html
@@ -49,7 +49,7 @@
         </div>
     </nav>
     <!--FIN BARRA DE NAVEGACIÓN-->
-
+<br>
 <section class="registro">
   <div class="container c-ingresos seccion-oscura">
     <h2 class="text-center p-3 letra-kanit-700" >Registro</h2>
@@ -76,30 +76,30 @@
       </a>
       <p class="mt-3">¿Ya tienes cuentas? <a class="text-oliva" href="login.html">Ingresa aquí</a></p>
     </div>
+    <br>
 </section>
 
 <!--INICIO FOOTER-->
 <footer class="bg-oliva d-flex flex-column align-items-center justify-content-center"> 
-    <i class="bi bi-truck truck-2"></i>
-    <p  class="footer-texto-logo">ParkingTruck</p>
-    <p class="footer-texto text-center">Disfruta de la verdadera comodidad</p>
-    
-    <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
-      <a href="https://twitter.com/ParkingTruck" target="_blank" rel="noopener noreferrer">
-        <i class="bi bi-twitter"></i>
-      </a>
-      <a href="https://facebook.com/ParkingTruck/" target="_blank" rel="noopener noreferrer">
-        <i class="bi bi-facebook"></i>
-      </a>
-      <a href="https://www.instagram.com/ParkingTruck/" target="_blank" rel="noopener noreferrer">
-        <i class="bi bi-instagram"></i>
-      </a>
-      <a href="mailto:parkingtruck@correo.com" target="_blank" rel="noopener noreferrer">
-        <i class="bi bi-envelope"></i>
-      </a>
-    </div>
-    <div class="derechos-de-autor">© 2023 ParkingTruck | Todos los derechos reservados</div>
-  </footer>
+  <img class="truck-2" src="../img/logotruck1.svg" alt="Foto Truck">
+  <p  class="footer-texto-logo letra-kanit-700">ParkingTruck</p>
+  <p class="footer-texto text-center">Disfruta de la verdadera comodidad</p>
+  <div class="iconos-redes-sociales d-flex flex-wrap align-items-center justify-content-center">
+    <a href="https://twitter.com/ParkingTruck" target="_blank" rel="noopener noreferrer">
+      <i class="bi bi-twitter"></i>
+    </a>
+    <a href="https://facebook.com/ParkingTruck/" target="_blank" rel="noopener noreferrer">
+      <i class="bi bi-facebook"></i>
+    </a>
+    <a href="https://www.instagram.com/ParkingTruck/" target="_blank" rel="noopener noreferrer">
+      <i class="bi bi-instagram"></i>
+    </a>
+    <a href="mailto:parkingtruck@correo.com" target="_blank" rel="noopener noreferrer">
+      <i class="bi bi-envelope"></i>
+    </a>
+  </div>
+  <div class="derechos-de-autor">© 2023 ParkingTruck | Todos los derechos reservados</div>
+</footer>
 <!--FIN FOOTER-->
   
       <!--bootstrap 5.0.2 JS-->
