Cambio de Tonos1

--- a/html/login.html
+++ b/html/login.html
@@ -27,7 +27,7 @@
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarToggler">
-          <a class="navbar-brand" href="index.html">
+          <a class="navbar-brand" href="/index.html">
             <img class="navbar-logo" src="../img/logotruck1.svg" alt="Foto Truck"> PARKINGTRUCK
           </a>
           <ul class="navbar-nav d-flex justify-content-center align-items-center">
