--- a/html/registro.html
+++ b/html/registro.html
@@ -28,7 +28,7 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarToggler">
                 <a class="navbar-brand" href="../index.html">
-                    <i class="bi bi-truck"></i>ParkingTruck
+                  <img class="navbar-logo" src="../img/logotruck1.svg" alt="Foto Truck"> PARKINGTRUCK
                 </a>
 
                 <ul class="navbar-nav d-flex justify-content-center align-items-center">
